add debug logger

--- a/config/app.ini
+++ b/config/app.ini
@@ -24,6 +24,9 @@ database = new_platform
 
 [log]
 log_save_path = logs/
-log_save_name = runtime_log
+log_save_name = gin
 log_file_ext = log
 time_format = 2006-01-02
+
+[log.debug]
+log_save_name = debug
